# evaluation-function-auto-tests

./: README.md  pyproject.toml  test_schema.json
autotests/: __init__.py  autotests.py  tests.py
